<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentDark"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_heigth"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:src="@drawable/ic_default_user"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="@dimen/settings_user_photo_border"
            app:civ_circle_background_color="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_full_name_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/tiny_vertical_margin"

            tools:text="@string/default_user_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/largeText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo" />

        <TextView
            android:id="@+id/settings_status_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/tiny_vertical_margin"

            tools:text="@string/settings_default_status"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_btn_change_photo"
        android:layout_width="@dimen/settings_icon_change_photo_width"
        android:layout_height="@dimen/settings_icon_change_photo_heigth"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:src="@drawable/ic_camera"
        android:clickable="true"
        android:focusable="true"

        android:translationY="-32dp"
        android:translationZ="90dp"
        app:civ_border_color="@color/colorAccent"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_label_account"
        style="@style/settingsLabelLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block">


        <TextView
            android:id="@+id/settings_text_account"
            style="@style/settingsAccentLabelText"
            android:text="@string/settings_text_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/horizontal_margin"
        android:id="@+id/settings_btn_change_phone_number"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_label_account">
        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/normalText"

            tools:text="@string/settings_default_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_hint_number"
            style="@style/hintNotingText"
            android:layout_marginTop="@dimen/tiny_vertical_margin"
            android:text="@string/settings_tap_to_change_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number" />

        <View
            android:id="@+id/divider_view_number"
            style="@style/dividerPaleGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_hint_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_phone_number">

        <TextView
            android:id="@+id/settings_username"
            style="@style/normalText"
            tools:text="@string/settings_default_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_hint_username"
            style="@style/hintNotingText"
            android:layout_marginTop="@dimen/tiny_vertical_margin"
            android:text="@string/settings_hint_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_username" />

        <View
            android:id="@+id/divider_view_login"
            style="@style/dividerPaleGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_hint_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username">

        <TextView
            android:id="@+id/settings_bio"
            style="@style/normalText"
            tools:text="@string/settings_default_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_hint_bio"
            style="@style/hintNotingText"
            android:layout_marginTop="@dimen/tiny_vertical_margin"
            android:text="@string/settings_hint_bio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_bio" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>