<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:contentDescription="@string/cd_register_image"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_enter_code_text"
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_enter_code_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/register_enter_code_hint_note_text"
        style="@style/hintNotingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_horizontal_margin"
        android:text="@string/register_enter_code_hint_note"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_enter_code_text" />

    <EditText
        android:id="@+id/register_edit_input_code"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@dimen/huge_horizontal_margin"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:autofillHints=""
        android:gravity="center"
        android:hint="__  __  __  __  __  __"
        android:textSize="@dimen/largeText"
        android:textColorHint="@color/colorGrey"
        android:inputType="phone"
        android:maxLength="6"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_enter_code_hint_note_text" />

</androidx.constraintlayout.widget.ConstraintLayout>